Correct grammatical errors

--- a/lab/4-5/report/references.bib
+++ b/lab/4-5/report/references.bib
@@ -41,7 +41,7 @@
 	note = {original-date: 2015-03-30T13:32:26Z}
 }
 
-@online{postel_transmission_nodate,
+@online{RFC793,
 	title = {Transmission Control Protocol},
 	url = {https://tools.ietf.org/html/rfc793},
 	author = {Postel, J.},
